--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>carousel-task</title>
 </head>
 <body>
-    <h1>welcomeoo</h1>
+    <header>
+        <h4>my header</h4>
+    </header>
+    <main>
+        <section>
+            <div class="carousel-wrapper">
+                <div class="slide">
+                    <img src="./images/swifttalk311022mondaypost.png" alt="">
+                    <p>image1</p>
+                </div>
+                <div class="slide">
+                    <img src="./images/Capt2.PNG" alt="">
+                    <p>image2</p>
+                </div>
+                <div class="slide">
+                    <img src="./images/cwwtech.PNG" alt="">
+                    <p>image3</p>
+                </div>
+                <div class="slide">
+                    <img src="./images/page.PNG" alt="">
+                    <p>image4</p>
+                </div>
+                <div class="slide">
+                    <img src="./images/laptop.jpg" alt="">
+                    <p>image5</p>
+                </div>
+                <div class="slide">
+                    <img src="./images/wed021122.png" alt="">
+                    <p>image6</p>
+                </div>
+                <div class="control">
+                    <i class="fa fa-chevron-left prev-btn"></i>
+                    <i class="fa fa-chevron-right next-btn"></i>
+                </div>
+                <div class="control-visibility">
+                    <div class="slide-icon"></div>
+                    <div class="slide-icon"></div>
+                    <div class="slide-icon"></div>
+                    <div class="slide-icon"></div>
+                    <div class="slide-icon"></div>
+                    <div class="slide-icon"></div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
+    <footer>
+        <span>my footer</span>
+    </footer>
+
+    <script src="./index.js"></script>
 </body>
 </html>
