--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <main>
         <section>
-            <div class="carousel-wrapper">
-                <div class="slide">
+            <div class="carousel-wrapper" id="carousel">
+                <div class="slide active">
                     <img src="./images/swifttalk311022mondaypost.png" alt="">
                     <p>image1</p>
                 </div>
@@ -39,12 +39,12 @@
                     <img src="./images/wed021122.png" alt="">
                     <p>image6</p>
                 </div>
-                <div class="control">
-                    <i class="fa fa-chevron-left prev-btn"></i>
-                    <i class="fa fa-chevron-right next-btn"></i>
+                <div class="control" id="control">
+                    <i class="fa fa-chevron-left prev-btn" id="prev-btn"></i>
+                    <i class="fa fa-chevron-right next-btn" id="next-btn"></i>
                 </div>
                 <div class="control-visibility">
-                    <div class="slide-icon"></div>
+                    <div class="slide-icon active"></div>
                     <div class="slide-icon"></div>
                     <div class="slide-icon"></div>
                     <div class="slide-icon"></div>
