--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h4>my header</h4>
+        <h2>My Carousel Task</h2>
     </header>
     <main>
         <section>
@@ -57,7 +57,7 @@
     </main>
 
     <footer>
-        <span>my footer</span>
+        <p>I4G X Zuri Cohort2.0 <span id="date"></span></p>
     </footer>
 
     <script src="./index.js"></script>
